edit-pizza.component table's overflow fixed

--- a/src/app/edit-pizza/edit-pizza.component.css
+++ b/src/app/edit-pizza/edit-pizza.component.css
@@ -84,6 +84,10 @@ button {
     margin-bottom: 5px;
 }
 
+.table {
+    width: auto;
+}
+
 @media only screen and (max-width: 908px){
 
     .panel > article > h6{
